25 November 2008: Wouter
	- configure complains when --without-ssl is given (bug #220).
	- skip unsupported feature tests on vista/mingw.
	- fixup testcode/streamtcp to work on vista/mingw.
	- root-hints test checks version of dig required.

24 November 2008: Wouter
	- document that the user of the server daemon needs read privileges
	  on the keys and certificates generated by unbound-control-setup.
	  This is different per system or distribution, usually, running the
	  script under the same username as the server uses suffices.
	  i.e.  sudo -u unbound unbound-control-setup
	- testset port to vista/mingw.
	- tcp_sigpipe to freebsd port.

21 November 2008: Wouter
	- fixed tcp accept, errors were printed when they should not.
	- unbound-control-setup.sh removes read/write permissions other
	  from the keys it creates (as suggested by Dmitriy Demidov).

20 November 2008: Wouter
	- fixup fatal error due to faulty error checking after tcp accept.
	- add check in rlimit to avoid integer underflow.
	- rlimit check with new formula; better estimate for number interfaces
	- nicer comments in rlimit check.
	- tag 1.1.1 created in svn.
	- trunk label is 1.1.2

19 November 2008: Wouter
	- bug #219: fixed so that syslog which delays opening until the first
	  log line is written, gets a log line while not chroot'ed yet.

18 November 2008: Wouter
	- iana portlist updated.
	- removed cast in unit test debug print that was not 64bit safe.
	- trunk back to 1.1.0; copied to tags 1.1.0 release.
	- trunk to has version number 1.1.1 again.
	- in 1.1.1; make clean nicer. grammar in manpage.

17 November 2008: Wouter
	- theoretical fix for problems reported on mailing list.
	  If a delegation point has no A but only AAAA and do-ip6 is no,
	  resolution would fail. Fixed to ask for the A and AAAA records.
	  It has to ask for both always, so that it can fail quietly, from
	  TLD perspective, when a zone is only reachable on one transport.